; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_intr_remapping.c_free_irte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_intr_remapping.c_free_irte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_2_iommu = type { i64, i64, i64, i32* }

@irq_2_ir_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @free_irte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.irq_2_iommu*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %7 = load i64, i64* %6, align 8
  %8 = call i32 @spin_lock_irqsave(i32* @irq_2_ir_lock, i64 %7)
  %9 = load i32, i32* %3, align 4
  %10 = call %struct.irq_2_iommu* @valid_irq_2_iommu(i32 %9)
  store %struct.irq_2_iommu* %10, %struct.irq_2_iommu** %5, align 8
  %11 = load %struct.irq_2_iommu*, %struct.irq_2_iommu** %5, align 8
  %12 = icmp ne %struct.irq_2_iommu* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %1
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @spin_unlock_irqrestore(i32* @irq_2_ir_lock, i64 %14)
  store i32 -1, i32* %2, align 4
  br label %30

16:                                               ; preds = %1
  %17 = load %struct.irq_2_iommu*, %struct.irq_2_iommu** %5, align 8
  %18 = call i32 @clear_entries(%struct.irq_2_iommu* %17)
  store i32 %18, i32* %4, align 4
  %19 = load %struct.irq_2_iommu*, %struct.irq_2_iommu** %5, align 8
  %20 = getelementptr inbounds %struct.irq_2_iommu, %struct.irq_2_iommu* %19, i32 0, i32 3
  store i32* null, i32** %20, align 8
  %21 = load %struct.irq_2_iommu*, %struct.irq_2_iommu** %5, align 8
  %22 = getelementptr inbounds %struct.irq_2_iommu, %struct.irq_2_iommu* %21, i32 0, i32 2
  store i64 0, i64* %22, align 8
  %23 = load %struct.irq_2_iommu*, %struct.irq_2_iommu** %5, align 8
  %24 = getelementptr inbounds %struct.irq_2_iommu, %struct.irq_2_iommu* %23, i32 0, i32 1
  store i64 0, i64* %24, align 8
  %25 = load %struct.irq_2_iommu*, %struct.irq_2_iommu** %5, align 8
  %26 = getelementptr inbounds %struct.irq_2_iommu, %struct.irq_2_iommu* %25, i32 0, i32 0
  store i64 0, i64* %26, align 8
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* @irq_2_ir_lock, i64 %27)
  %29 = load i32, i32* %4, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %16, %13
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local %struct.irq_2_iommu* @valid_irq_2_iommu(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @clear_entries(%struct.irq_2_iommu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
